--- a/SeleniumAutomationProject/test-output/emailable-report.html
+++ b/SeleniumAutomationProject/test-output/emailable-report.html
@@ -8,14 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Online Shopping Applications</th></tr>
-<tr><td><a href="#t0">Parallel Execution</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">60,695</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,657</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Online Shopping Applications</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Parallel Execution &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.TestNGDemos.D02TestOSApplication</td><td><a href="#m0">testFirstCry</a></td><td rowspan="1">1761065284694</td><td rowspan="1">60574</td></tr><tr class="passedeven"><td><a href="#m1">testLibas</a></td><td rowspan="1">1761065284693</td><td rowspan="1">59624</td></tr><tr class="passedeven"><td><a href="#m2">testLittleBox</a></td><td rowspan="1">1761065284694</td><td rowspan="1">60036</td></tr><tr class="passedeven"><td><a href="#m3">testOnyc</a></td><td rowspan="1">1761065284694</td><td rowspan="1">57749</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.TestNGDemos.D09POM_Client</td><td><a href="#m0">registration1</a></td><td rowspan="1">1761152363287</td><td rowspan="1">1178</td></tr><tr class="passedeven"><td><a href="#m1">registration2</a></td><td rowspan="1">1761152366983</td><td rowspan="1">1069</td></tr></tbody>
 </table>
-<h2>Parallel Execution</h2><h3 id="m0">com.TestNGDemos.D02TestOSApplication#testFirstCry</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.TestNGDemos.D02TestOSApplication#testLibas</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.TestNGDemos.D02TestOSApplication#testLittleBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.TestNGDemos.D02TestOSApplication#testOnyc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.TestNGDemos.D09POM_Client#registration1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.TestNGDemos.D09POM_Client#registration2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
