--- a/SeleniumAutomationProject/test-output/index.html
+++ b/SeleniumAutomationProject/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Online_Shopping_Applications" class="navigator-link">
-              <span class="suite-name border-passed">Online Shopping Applications</span>
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Online_Shopping_Applications" class="navigator-link ">
-                    <span>D:\StarAgile\Demos\SA2507019\SeleniumAutomationProject\src\com\TestNGDemos\X07ParelleExecution.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-1861444109\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Online_Shopping_Applications" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Online_Shopping_Applications" class="navigator-link ">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Online_Shopping_Applications" class="navigator-link ">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Online_Shopping_Applications" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Online_Shopping_Applications" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Online_Shopping_Applications" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -92,36 +92,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Online_Shopping_Applications" class="hide-methods passed suite-Online_Shopping_Applications"> (hide)</a> <!-- hide-methods passed suite-Online_Shopping_Applications -->
-                      <a href="#" panel-name="suite-Online_Shopping_Applications" class="show-methods passed suite-Online_Shopping_Applications"> (show)</a> <!-- show-methods passed suite-Online_Shopping_Applications -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Online_Shopping_Applications">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Online_Shopping_Applications" title="com.TestNGDemos.D02TestOSApplication" class="method navigator-link" hash-for-method="testFirstCry">testFirstCry</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TestNGDemos.D09POM_Client" class="method navigator-link" hash-for-method="registration1">registration1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Online_Shopping_Applications" title="com.TestNGDemos.D02TestOSApplication" class="method navigator-link" hash-for-method="testLibas">testLibas</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TestNGDemos.D09POM_Client" class="method navigator-link" hash-for-method="registration2">registration2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Online_Shopping_Applications" title="com.TestNGDemos.D02TestOSApplication" class="method navigator-link" hash-for-method="testLittleBox">testLittleBox</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Online_Shopping_Applications" title="com.TestNGDemos.D02TestOSApplication" class="method navigator-link" hash-for-method="testOnyc">testOnyc</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Online_Shopping_Applications -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -132,159 +122,145 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Online_Shopping_Applications" class="panel Online_Shopping_Applications">
-          <div class="suite-Online_Shopping_Applications-class-passed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestNGDemos.D02TestOSApplication</span>
+              <span class="class-name">com.TestNGDemos.D09POM_Client</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testFirstCry">
-                  </a> <!-- testFirstCry -->
-                  <span class="method-name">testFirstCry</span>
+                  <a name="registration1">
+                  </a> <!-- registration1 -->
+                  <span class="method-name">registration1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testLibas">
-                  </a> <!-- testLibas -->
-                  <span class="method-name">testLibas</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testLittleBox">
-                  </a> <!-- testLittleBox -->
-                  <span class="method-name">testLittleBox</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testOnyc">
-                  </a> <!-- testOnyc -->
-                  <span class="method-name">testOnyc</span>
+                  <a name="registration2">
+                  </a> <!-- registration2 -->
+                  <span class="method-name">registration2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Online_Shopping_Applications-class-passed -->
-        </div> <!-- panel Online_Shopping_Applications -->
-        <div panel-name="test-xml-Online_Shopping_Applications" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\StarAgile\Demos\SA2507019\SeleniumAutomationProject\src\com\TestNGDemos\X07ParelleExecution.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-1861444109\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;4&quot; parallel=&quot;methods&quot; name=&quot;Online Shopping Applications&quot;&gt;
-  &lt;test thread-count=&quot;4&quot; parallel=&quot;methods&quot; name=&quot;Parallel Execution&quot;&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestNGDemos.D02TestOSApplication&quot;/&gt;
+      &lt;class name=&quot;com.TestNGDemos.D09POM_Client&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Parallel Execution --&gt;
-&lt;/suite&gt; &lt;!-- Online Shopping Applications --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Online_Shopping_Applications" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Online Shopping Applications</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Parallel Execution (1 class)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Online_Shopping_Applications" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Online Shopping Applications</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Online_Shopping_Applications" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Online Shopping Applications</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Online_Shopping_Applications');
-function tableData_Online_Shopping_Applications() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testFirstCry')
-data.setCell(0, 2, 'com.TestNGDemos.D02TestOSApplication')
-data.setCell(0, 3, 60574);
+data.setCell(0, 1, 'registration1')
+data.setCell(0, 2, 'com.TestNGDemos.D09POM_Client')
+data.setCell(0, 3, 1178);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testLittleBox')
-data.setCell(1, 2, 'com.TestNGDemos.D02TestOSApplication')
-data.setCell(1, 3, 60036);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testLibas')
-data.setCell(2, 2, 'com.TestNGDemos.D02TestOSApplication')
-data.setCell(2, 3, 59624);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testOnyc')
-data.setCell(3, 2, 'com.TestNGDemos.D02TestOSApplication')
-data.setCell(3, 3, 57749);
-window.suiteTableData['Online_Shopping_Applications']= { tableData: data, tableDiv: 'times-div-Online_Shopping_Applications'}
+data.setCell(1, 1, 'registration2')
+data.setCell(1, 2, 'com.TestNGDemos.D09POM_Client')
+data.setCell(1, 3, 1069);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
-              <div id="times-div-Online_Shopping_Applications">
-              </div> <!-- times-div-Online_Shopping_Applications -->
+              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Online_Shopping_Applications" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Online Shopping Applications</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Online_Shopping_Applications" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Online_Shopping_Applications" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestNGDemos.D02TestOSApplication</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testLibas</span>
+              <div class="chronological-class-name">com.TestNGDemos.D09POM_Client</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-test before -->
+              <div class="configuration-method before">
+                <span class="method-name">refreshPage</span>
+                <span class="method-start">5283 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testLittleBox</span>
-                <span class="method-start">1 ms</span>
+                <span class="method-name">registration1</span>
+                <span class="method-start">7864 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">refreshPage</span>
+                <span class="method-start">9048 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testFirstCry</span>
-                <span class="method-start">1 ms</span>
+                <span class="method-name">registration2</span>
+                <span class="method-start">11560 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testOnyc</span>
-                <span class="method-start">1 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">12633 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
